--- a/App/Sebti/app/src/main/res/layout/single_item_layout.xml
+++ b/App/Sebti/app/src/main/res/layout/single_item_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/single_item_tv"
-    android:textSize="28sp"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:text="TextView" />
+    android:id="@+id/single_item_tv"
+    android:contentDescription="Loading"
+    android:gravity="center|center_vertical"
+    android:layout_gravity="center|center_vertical"/>
